<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/transparent"
                android:paddingBottom="@dimen/padding_small"
                android:paddingLeft="@dimen/padding_medium"
                android:paddingRight="@dimen/padding_medium"
                android:paddingTop="@dimen/padding_small"
                tools:context=".activities.EconomyCountdown">

    <RelativeLayout
            android:id="@+id/topcontent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/game_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="5dip"
                android:text="@string/game_info"
                android:textColor="@color/divider"/>

        <View
                android:id="@+id/ll_divider"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:layout_below="@+id/game_info"
                android:background="@color/divider"/>

        <LinearLayout
                android:id="@+id/gameinput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_divider"
                android:orientation="horizontal">

            <EditText
                    android:id="@+id/etGameEffi"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="2dip"
                    android:layout_weight="1"
                    android:hint="@string/game_name"
                    android:inputType="textShortMessage"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/locationinput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gameinput"
                android:orientation="horizontal">

            <EditText
                    android:id="@+id/etLocationEffi"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_weight="1"
                    android:hint="@string/ingame_loc"
                    android:inputType="textShortMessage"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/quickoptseffi"
            android:layout_below="@+id/topcontent"
            android:orientation="vertical">

        <LinearLayout
                android:id="@+id/ll_divider2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:paddingTop="5dip"
                    android:text="@string/expinfo"
                    android:textColor="@color/divider"/>

            <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dip"
                    android:background="@color/divider"/>
        </LinearLayout>

        <TextView
                android:id="@+id/tvPercentage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_divider2"
                android:layout_marginTop="8dip"
                android:gravity="center"
                android:text="@string/currpercent"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPercentage"
                android:gravity="center"
                android:orientation="horizontal">

            <EditText
                    android:id="@+id/etPercentage"
                    android:layout_width="150dip"
                    android:layout_height="48dip"
                    android:layout_margin="5dip"
                    android:gravity="center"
                    android:hint="@string/effihint"
                    android:inputType="numberDecimal"/>

            <Button
                    android:id="@+id/bGrind"
                    android:layout_width="100dip"
                    android:layout_height="50dip"
                    android:layout_margin="10dip"
                    android:background="@drawable/button_startgrind"
                    android:text="@string/start"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/quickoptseffi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:orientation="vertical">

        <TextView
                android:id="@+id/game_info3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/quickopt"
                android:textColor="@color/divider"/>

        <View
                android:id="@+id/ll_divider3"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="@color/divider"/>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

            <CheckBox
                    android:id="@+id/cbSavetofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/savetofile"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_size_quick_options"/>

            <CheckBox
                    android:id="@+id/cbOtherthing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rememberinfo"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_size_quick_options"/>
        </LinearLayout>

        <RadioGroup
                android:id="@+id/rgTypeofdata"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

            <RadioButton
                    android:id="@+id/rbPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/percent"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_size_quick_options"/>

            <RadioButton
                    android:id="@+id/rbExperience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/experience"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_size_quick_options"/>
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>