<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@android:color/transparent"
              android:gravity="center_vertical"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <LinearLayout
            android:id="@+id/FirstRowSplash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

        <ImageButton
                android:id="@+id/bMainEfficiency"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/efficiency"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_efficiency"/>

        <ImageButton
                android:id="@+id/bMainEconomy"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/economy"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_economy"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/SecondRowSplash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

        <ImageButton
                android:id="@+id/bMainTimers"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/timer"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_timers"/>
    </LinearLayout>

</LinearLayout>